# sloop

./: .gitignore  Cargo.toml  Makefile  PKGBUILD  README.md  conf.go  cue.go  example.toml  go.mod  go.sum  maddy.toml  main.go  podman.go  service.cue  sloop_tool.cue  test.lua
catatonit/: bin.go
cmd/: check.go  fetch.go  init.go  print.go  purge.go  root.go  run.go
common/: common.go
conf/: main.cue
conf/busybox/: defs.cue
conf/cue.mod/: module.cue
conf/miniflux/: defs.cue
conf/traefik/: defs.cue
cue/: conf.go  cue.go  errors.go
image/: errors.go  image.go
package/: PKGBUILD
podman/: podman.go
src/: exec.rs  lua.rs  main.rs  objects.rs  plan.rs  podman.rs  systemd.rs  utils.rs
systemd/: errors.go  systemd.go
